turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: not found: value c
  while ( colors(i) != c ){
                       ^Turmite:16: error: type mismatch;
 found   : java.awt.Color
 required: Int
  setCouleurSol(rule(state)(couleurActuelle)(0));
                            ^Turmite:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
  if ( rule(state)(couleurActuelle)(1) == Rien ){
                   ^Turmite:17: error: not found: value Rien
  if ( rule(state)(couleurActuelle)(1) == Rien ){
                                          ^Turmite:19: error: type mismatch;
 found   : java.awt.Color
 required: Int
  } else if ( rule(state)(couleurActuelle)(1) == Gauche ){
                          ^Turmite:21: error: type mismatch;
 found   : java.awt.Color
 required: Int
  } else if ( rule(state)(couleurActuelle)(1) == Retourne ){
                          ^Turmite:23: error: type mismatch;
 found   : java.awt.Color
 required: Int
  } else if ( rule(state)(couleurActuelle)(1) ==  Droite ){
                          ^Turmite:26: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state = rule(state)(couleurActuelle)(2);
                      ^